--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: "0 8 * * *"
+    - cron: "0 7 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,4 +22,5 @@ jobs:
           ljy_stuno: ${{ secrets.LJY_STUDENT_NUMBER }}
           ljy_passwd: ${{ secrets.LJY_PASSWORD }}
         run: |
+#          pip install Steganocrypto
           python main.py -s "$ljy_stuno" -p "$ljy_passwd"
