--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: "21 7 18,19,20 9 *"
+    - cron: "21 7 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
