--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run the Python Script for LJY
         env:
+          ljy_userid: ${{ secrets.LJY_ID }}
           ljy_stuno: ${{ secrets.LJY_STUDENT_NUMBER }}
           ljy_passwd: ${{ secrets.LJY_PASSWORD }}
         run: |
