--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,19 +60,20 @@ jobs:
           cp main.py yml/
           python yml/main.py -s "$yml_stuno" -p "${yml_passwd_p1}%${yml_passwd_p2}" --userid "$yml_userid"
   restart_when_failed:
-    - runs-on: ubuntu-latest
-      if: failure()
-      needs: build
-      steps:
-      - name: Send an Email if failed
-        uses: dawidd6/action-send-mail@master
-        with:
-          serveraddress: smtp.qq.com
-          serverport: 465
-          username: ${{ secrets.MAIL_ACCOUNT }}
-          password: ${{ secrets.MAIL_PASSWORD }}
-          subject: 'GitHub Action Test User'
-          body: 'Test Email'
-          to: lyujiuyang@cuc.edu.cn
-          from: GitHub Actions
-          content_type: text/html
+    runs-on: ubuntu-latest
+    if: failure()
+    needs: build
+    steps:
+    - uses: actions/checkout@v3
+    - name: Send an Email if failed
+      uses: dawidd6/action-send-mail@master
+      with:
+        serveraddress: smtp.qq.com
+        serverport: 465
+        username: ${{ secrets.MAIL_ACCOUNT }}
+        password: ${{ secrets.MAIL_PASSWORD }}
+        subject: 'GitHub Action Test User'
+        body: 'Test Email'
+        to: lyujiuyang@cuc.edu.cn
+        from: GitHub Actions
+        content_type: text/html
