--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
   restart_when_failed:
     runs-on: ubuntu-latest
     needs: [build-ljy, build-cwx]
-    if: failure()s
+    if: failure()
     steps:
     - uses: actions/checkout@v3
     - name: Send an Email if failed
