--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,14 +65,14 @@ jobs:
             pip install -r requirements.txt
             cp main.py yml/
             python yml/main.py -s "$yml_stuno" -p "${yml_passwd_p1}%${yml_passwd_p2}" --userid "$yml_userid"
-  restart_when_failed:
+  send_email_when_failed:
     runs-on: ubuntu-latest
     needs: [build-ljy, build-cwx, build-lzq, build-yml]
     if: failure()
     steps:
     - uses: actions/checkout@v3
     - name: Send mail
-      uses: dawidd6/action-send-mail@v3
+      uses: dawidd6/action-send-mail@v3.7.0
       with:
         server_address: smtp.qq.com
         server_port: 465
@@ -82,5 +82,4 @@ jobs:
         subject: Github Actions Jobs ERROR
         to: lyujiuyang@cuc.edu.cn
         from: LyuLumos from GitHub Action
-        body: Build job of ${{ github.repository }} Error!
-#        html_body: '自动打卡的某个或某几个任务失效，请查看GitHub Action记录。'
+        body: Build jobs of ${{ github.repository }} Error! Please check <a href="https://github.com/LyuLumos/CUC-Auto-Clock/actions" target="_blank">https://github.com/LyuLumos/CUC-Auto-Clock/actions</a> for more details.
