--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,21 +66,21 @@ jobs:
           pip install -r requirements.txt
           cp main.py yml/
           python yml/main.py -s "$yml_stuno" -p "${yml_passwd_p1}%${yml_passwd_p2}" --userid "$yml_userid"
-  send_email_when_failed:
-    runs-on: ubuntu-latest
-    needs: [build-ljy, build-cwx, build-lzq, build-yml]
-    if: failure()
-    steps:
-    - uses: actions/checkout@v3
-    - name: Send mail
-      uses: dawidd6/action-send-mail@v3.7.0
-      with:
-        server_address: smtp.qq.com
-        server_port: 465
-        secure: true
-        username: ${{ secrets.MAIL_ACCOUNT }}
-        password: ${{ secrets.MAIL_PASSWORD }}
-        subject:  Github Actions Jobs ERROR
-        to: lyujiuyang@cuc.edu.cn, cwx_cuc@cuc.edu.cn, yyumengli@163.com, lzqcuc@cuc.edu.cn
-        from: LyuLumos from GitHub Action
-        html_body: Build jobs of ${{ github.repository }} Error! Please check <a href="https://github.com/LyuLumos/CUC-Auto-Clock/actions" target="_blank">https://github.com/LyuLumos/CUC-Auto-Clock/actions</a> for more details.
+  # send_email_when_failed:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-ljy, build-cwx, build-lzq, build-yml]
+  #   if: failure()
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Send mail
+  #     uses: dawidd6/action-send-mail@v3.7.0
+  #     with:
+  #       server_address: smtp.qq.com
+  #       server_port: 465
+  #       secure: true
+  #       username: ${{ secrets.MAIL_ACCOUNT }}
+  #       password: ${{ secrets.MAIL_PASSWORD }}
+  #       subject:  Github Actions Jobs ERROR
+  #       to: lyujiuyang@cuc.edu.cn, cwx_cuc@cuc.edu.cn, yyumengli@163.com, lzqcuc@cuc.edu.cn
+  #       from: LyuLumos from GitHub Action
+  #       html_body: Build jobs of ${{ github.repository }} Error! Please check <a href="https://github.com/LyuLumos/CUC-Auto-Clock/actions" target="_blank">https://github.com/LyuLumos/CUC-Auto-Clock/actions</a> for more details.
